--- a/desktop-client/web-client/index.html
+++ b/desktop-client/web-client/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>PrintShare - Send Files</title>
-    <link rel="stylesheet" href="/web/assets/styles.css">
+    <link rel="stylesheet" href="/web/styles.css">
+    <link rel="icon" type="image/png" href="/web/favicon.png">
 </head>
 
 <body>
@@ -161,7 +162,7 @@
     <!-- Toast Notifications -->
     <div id="toastContainer" class="toast-container"></div>
 
-    <script src="/web/assets/app.js"></script>
+    <script src="/web/app.js"></script>
 </body>
 
 </html>
